# PersonalSite-Api

./: .gitignore  Cargo.toml  README.md
front_end/assets/css/: 1.css
front_end/home/: home.html
src/: main.rs  web_server.rs
src/web_server/api_endpoints/: image.rs
src/web_server/helper_mod/: file_manger.rs
src/web_server/pages/: page.rs
src/web_server/parsers/: form_parser.rs
src/web_server/storage/: file_manger.rs  loger.rs
src/web_server/storage/database/: db_context.rs  db_module.rs
src/web_server/storage/database/db_actions/: skills_actions.rs  users_actions.rs
