[package]
name = "ali_miracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.9.0"
serde = "1.0.133"
base64 = "0.13.0"
actix-multipart = "0.3"
futures-util = "0.3"
chrono = "0.4"